[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/Player/Camera/CameraRig.gd" type="Script" id=1]
[ext_resource path="res://src/Player/Camera/AimTarget.gd" type="Script" id=2]
[ext_resource path="res://src/Player/Camera/States/Default.gd" type="Script" id=3]
[ext_resource path="res://src/Main/StateMachine/state_machine.gd" type="Script" id=4]
[ext_resource path="res://assets/2d/crosshair076.png" type="Texture" id=5]
[ext_resource path="res://src/Player/Camera/States/camera.gd" type="Script" id=6]
[ext_resource path="res://src/Player/Camera/States/aim.gd" type="Script" id=7]
[ext_resource path="res://src/Player/Camera/SpringArm.gd" type="Script" id=8]
[ext_resource path="res://src/Player/Camera/HUD.gd" type="Script" id=9]
[ext_resource path="res://assets/theme/gdquest.theme" type="Theme" id=10]
[ext_resource path="res://assets/theme/panel/panel.stylebox" type="StyleBox" id=11]
[ext_resource path="res://assets/2d/icon_debug.svg" type="Texture" id=12]
[ext_resource path="res://src/Player/Camera/States/Talk.gd" type="Script" id=13]


[sub_resource type="CylinderMesh" id=1]
top_radius = 0.1
bottom_radius = 0.1
height = 20.0

[sub_resource type="CapsuleShape" id=2]
height = 0.5

[node name="CameraRig" type="Spatial"]
script = ExtResource( 1 )

[node name="ClippedCamera" type="ClippedCamera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.87462, 0.48481, 0, -0.48481, 0.87462, 0, 2.31542, 3.12174 )
current = true
margin = 5.0

[node name="AimRay" type="RayCast" parent="ClippedCamera"]
transform = Transform( 1, 0, 0, 0, 0.999847, 0.0174524, 0, -0.0174524, 0.999847, 0, -0.194905, -0.679715 )
enabled = true
cast_to = Vector3( 0, 0, -30 )
collision_mask = 2

[node name="DebugRay" type="MeshInstance" parent="ClippedCamera/AimRay"]
transform = Transform( 1, 0, 0, 0, 2.98023e-08, -1, 0, 1, 2.98023e-08, 0, 0, -10 )
visible = false
mesh = SubResource( 1 )
material/0 = null

[node name="Muzzle" type="Position3D" parent="ClippedCamera/AimRay"]
transform = Transform( 1, 0, 0, 0, 1, 1.49012e-07, 0, -1.49012e-07, 1, 0.00327462, -0.093479, -4.29303 )

[node name="SpringArm" type="SpringArm" parent="."]
transform = Transform( 1, 0, 0, 0, 0.87462, 0.48481, 0, -0.48481, 0.87462, 0, 0.5, 0.5 )
collision_mask = 2
shape = SubResource( 2 )
spring_length = 4.5
margin = 0.5
script = ExtResource( 8 )
length_range = Vector2( 3, 6 )
zoom = 0.5

[node name="CameraTarget" type="Position3D" parent="SpringArm"]
transform = Transform( 1, 0, 0, 0, 1, 2.98023e-08, 0, -2.98023e-08, 1, 0, 0, 0 )

[node name="AimTarget" type="Sprite3D" parent="."]
visible = false
modulate = Color( 0, 1, 0, 1 )
pixel_size = 0.008
texture = ExtResource( 5 )
script = ExtResource( 2 )

[node name="Recticle" type="TextureRect" parent="."]
visible = false
modulate = Color( 0.278431, 0.278431, 0.278431, 0.654902 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -31.9999
margin_top = 10.0
margin_right = 32.0001
margin_bottom = 74.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )
initial_state = NodePath("../../CameraRig/StateMachine/Camera/Default")

[node name="Camera" type="Node" parent="StateMachine"]
script = ExtResource( 6 )
deadzone = 0.1
sensitivity_gamepad = Vector2( 0.5, 0.5 )

[node name="Default" type="Node" parent="StateMachine/Camera"]
script = ExtResource( 3 )

[node name="Aim" type="Node" parent="StateMachine/Camera"]
script = ExtResource( 7 )
offset_camera = Vector3( 0.75, -1, 0 )
sensitivity_gamepad = Vector2( 0.25, 0.25 )

[node name="Tween" type="Tween" parent="StateMachine/Camera/Aim"]

[node name="Talk" type="Node" parent="StateMachine"]
script = ExtResource( 13 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 9 )

[node name="Panel" type="Panel" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 90.0
margin_top = 35.0
margin_right = 390.0
margin_bottom = 195.0
size_flags_vertical = 3
custom_styles/panel = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/Panel/VBoxContainer"]
margin_right = 300.0
margin_bottom = 50.0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HUD/Panel/VBoxContainer/HBoxContainer"]
self_modulate = Color( 1, 0, 0, 1 )
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 5
size_flags_vertical = 6
texture = ExtResource( 12 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="HUD/Panel/VBoxContainer/HBoxContainer"]
margin_left = 54.0
margin_right = 300.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Interact"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="HUD/Panel/VBoxContainer"]
margin_top = 54.0
margin_right = 300.0
margin_bottom = 106.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="HUD/Panel/VBoxContainer/HBoxContainer2"]
margin_right = 300.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 10 )
step = 1.0
rounded = true
percent_visible = false

[node name="Label" type="Label" parent="HUD/Panel/VBoxContainer/HBoxContainer2/ProgressBar"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "HP"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StateLabel" type="HBoxContainer" parent="HUD/Panel/VBoxContainer"]
margin_top = 110.0
margin_right = 300.0
margin_bottom = 160.0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/Panel/VBoxContainer/StateLabel"]
margin_right = 148.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "STATE"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="HUD/Panel/VBoxContainer/StateLabel"]
margin_left = 152.0
margin_right = 300.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource( 10 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Interact"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="object_found" from="." to="HUD" method="_on_CameraRig_object_found"]
